traefik.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 30021
      name: web
    - protocol: TCP
      port: 30042
      name: admin
  type: NodePort
