poll.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: poll-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: poll
              servicePort: 80
